<resources>
    <string name="app_name">Popcorn</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="discover">Discover</string>
    <string name="popular_people">Popular People</string>
    <string name="reminder">Reminder</string>
    <string name="settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">search</string>
    <string name="home">Home</string>
    <string name="now_playing">Now Playing</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="raka">Raka Permana Putra</string>
    <string name="logout">Logout</string>
    <string name="watchlist">Watchlist</string>
    <string name="favorite">Favorite</string>
</resources>
