<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home"/>
        <item
                android:id="@+id/nav_movies"
                android:icon="@drawable/ic_movies"
                android:title="@string/movies"/>
        <item
                android:id="@+id/nav_tv_shows"
                android:icon="@drawable/ic_tv_shows"
                android:title="@string/tv_shows"/>
        <item
                android:id="@+id/nav_discover"
                android:icon="@drawable/ic_discover"
                android:title="@string/discover"/>
        <item
                android:id="@+id/nav_popular_people"
                android:icon="@drawable/ic_people"
                android:title="@string/popular_people"/>
    </group>

    <group android:checkableBehavior="single"
           android:id="@+id/group_favorite">

        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite_border_black_24dp"
            android:title="@string/favorite"/>

        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/ic_remove_red_eye_black_24dp"
            android:title="@string/watchlist"/>

    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/group_login">

        <item
                android:id="@+id/nav_login"
                android:icon="@drawable/settings"
                android:title="@string/login"/>

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/settings"
            android:title="@string/logout"/>

    </group>


</menu>
